@@ -114,7 +114,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**  * @author x.hanin  *  */
+comment|/**  * @author x.hanin  * @author Maarten Coene (for the optional part management)  */
 end_comment
 
 begin_class
@@ -868,43 +868,221 @@ name|Map
 name|tokens
 parameter_list|)
 block|{
-name|Matcher
-name|m
-init|=
-name|TOKEN_PATTERN
-operator|.
-name|matcher
-argument_list|(
-name|pattern
-argument_list|)
-decl_stmt|;
 name|StringBuffer
-name|sb
+name|buffer
 init|=
 operator|new
 name|StringBuffer
 argument_list|()
 decl_stmt|;
-while|while
-condition|(
-name|m
+name|char
+index|[]
+name|chars
+init|=
+name|pattern
 operator|.
-name|find
+name|toCharArray
 argument_list|()
+decl_stmt|;
+name|StringBuffer
+name|optionalPart
+init|=
+literal|null
+decl_stmt|;
+name|StringBuffer
+name|tokenBuffer
+init|=
+literal|null
+decl_stmt|;
+name|boolean
+name|insideOptionalPart
+init|=
+literal|false
+decl_stmt|;
+name|boolean
+name|insideToken
+init|=
+literal|false
+decl_stmt|;
+name|boolean
+name|tokenHadValue
+init|=
+literal|false
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|chars
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+switch|switch
+condition|(
+name|chars
+index|[
+name|i
+index|]
 condition|)
 block|{
-name|String
-name|var
-init|=
-name|m
-operator|.
-name|group
+case|case
+literal|'('
+case|:
+if|if
+condition|(
+name|insideOptionalPart
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
 argument_list|(
-literal|1
+literal|"invalid start of optional part at position "
+operator|+
+name|i
+operator|+
+literal|" in pattern "
+operator|+
+name|pattern
 argument_list|)
+throw|;
+block|}
+name|optionalPart
+operator|=
+operator|new
+name|StringBuffer
+argument_list|()
+expr_stmt|;
+name|insideOptionalPart
+operator|=
+literal|true
+expr_stmt|;
+name|tokenHadValue
+operator|=
+literal|false
+expr_stmt|;
+break|break;
+case|case
+literal|')'
+case|:
+if|if
+condition|(
+operator|!
+name|insideOptionalPart
+operator|||
+name|insideToken
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"invalid end of optional part at position "
+operator|+
+name|i
+operator|+
+literal|" in pattern "
+operator|+
+name|pattern
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+name|tokenHadValue
+condition|)
+block|{
+name|buffer
+operator|.
+name|append
+argument_list|(
+name|optionalPart
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|insideOptionalPart
+operator|=
+literal|false
+expr_stmt|;
+break|break;
+case|case
+literal|'['
+case|:
+if|if
+condition|(
+name|insideToken
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"invalid start of token at position "
+operator|+
+name|i
+operator|+
+literal|" in pattern "
+operator|+
+name|pattern
+argument_list|)
+throw|;
+block|}
+name|tokenBuffer
+operator|=
+operator|new
+name|StringBuffer
+argument_list|()
+expr_stmt|;
+name|insideToken
+operator|=
+literal|true
+expr_stmt|;
+break|break;
+case|case
+literal|']'
+case|:
+if|if
+condition|(
+operator|!
+name|insideToken
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"invalid end of token at position "
+operator|+
+name|i
+operator|+
+literal|" in pattern "
+operator|+
+name|pattern
+argument_list|)
+throw|;
+block|}
+name|String
+name|token
+init|=
+name|tokenBuffer
+operator|.
+name|toString
+argument_list|()
 decl_stmt|;
 name|String
-name|val
+name|value
 init|=
 operator|(
 name|String
@@ -913,57 +1091,135 @@ name|tokens
 operator|.
 name|get
 argument_list|(
-name|var
+name|token
 argument_list|)
 decl_stmt|;
 if|if
 condition|(
-name|val
-operator|==
-literal|null
+name|insideOptionalPart
 condition|)
 block|{
-name|val
+name|tokenHadValue
 operator|=
-name|m
+operator|(
+name|value
+operator|!=
+literal|null
+operator|)
+operator|&&
+operator|(
+name|value
 operator|.
-name|group
+name|length
 argument_list|()
+operator|>
+literal|0
+operator|)
 expr_stmt|;
-block|}
-name|m
+name|optionalPart
 operator|.
-name|appendReplacement
+name|append
 argument_list|(
-name|sb
-argument_list|,
-name|val
-operator|.
-name|replaceAll
-argument_list|(
-literal|"\\\\"
-argument_list|,
-literal|"\\\\\\\\"
-argument_list|)
-operator|.
-name|replaceAll
-argument_list|(
-literal|"\\$"
-argument_list|,
-literal|"\\\\\\$"
-argument_list|)
+name|value
 argument_list|)
 expr_stmt|;
 block|}
-name|m
+else|else
+block|{
+name|buffer
 operator|.
-name|appendTail
+name|append
 argument_list|(
-name|sb
+name|value
 argument_list|)
 expr_stmt|;
+block|}
+name|insideToken
+operator|=
+literal|false
+expr_stmt|;
+break|break;
+default|default:
+if|if
+condition|(
+name|insideToken
+condition|)
+block|{
+name|tokenBuffer
+operator|.
+name|append
+argument_list|(
+name|chars
+index|[
+name|i
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+if|else if
+condition|(
+name|insideOptionalPart
+condition|)
+block|{
+name|optionalPart
+operator|.
+name|append
+argument_list|(
+name|chars
+index|[
+name|i
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|buffer
+operator|.
+name|append
+argument_list|(
+name|chars
+index|[
+name|i
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+break|break;
+block|}
+block|}
+if|if
+condition|(
+name|insideToken
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"last token hasn't been closed in pattern "
+operator|+
+name|pattern
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+name|insideOptionalPart
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"optional part hasn't been closed in pattern "
+operator|+
+name|pattern
+argument_list|)
+throw|;
+block|}
 return|return
-name|sb
+name|buffer
 operator|.
 name|toString
 argument_list|()
