@@ -164,6 +164,74 @@ block|}
 block|}
 specifier|public
 name|void
+name|testOptionalSubstitute
+parameter_list|()
+block|{
+name|Map
+name|tokens
+init|=
+operator|new
+name|HashMap
+argument_list|()
+decl_stmt|;
+name|tokens
+operator|.
+name|put
+argument_list|(
+literal|"token"
+argument_list|,
+literal|""
+argument_list|)
+expr_stmt|;
+name|tokens
+operator|.
+name|put
+argument_list|(
+literal|"othertoken"
+argument_list|,
+literal|"myval"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"test-myval"
+argument_list|,
+name|IvyPatternHelper
+operator|.
+name|substituteTokens
+argument_list|(
+literal|"test(-[token])(-[othertoken])"
+argument_list|,
+name|tokens
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|tokens
+operator|.
+name|put
+argument_list|(
+literal|"token"
+argument_list|,
+literal|"val"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"test-val-myval"
+argument_list|,
+name|IvyPatternHelper
+operator|.
+name|substituteTokens
+argument_list|(
+literal|"test(-[token])(-[othertoken])"
+argument_list|,
+name|tokens
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testOrganization
 parameter_list|()
 block|{
