@@ -4,6 +4,7 @@
 - NEW: ability to output a path of dependencies in cache from the standalone mode (IVY-92)
 - NEW: it is now possible to reference existing resolver in resolver containers (IVY-35)
 - NEW: overwrite attribute in the publish task now let force overwrite of read only files (IVY-83) 
+- IMPROVE: allow optional parts in the patterns (IVY-102) (thanks to Maarten Coene)
 - IMPROVE: ability to define variable directly in ivyconf.xml (IVY-100)
 - IMPROVE: ability to use no revision in pattern with latest.integration dependency, artifacts being updated according to revision change in ivy file (if checkmodified is set to true) (IVY-95)
 - IMPROVE: ability to specify a root module in buildlist to filter out unnecessary build files (IVY-93) (thanks to Kristian Cibulskis)
